--- a/_exercise/4_concordance/CMakeLists.txt
+++ b/_exercise/4_concordance/CMakeLists.txt
@@ -1,14 +1,5 @@
-##############
-# Vcpkg integration - uncomment if necessery
-if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
-endif()
-
-message(STATUS "Vcpkg integration script found: " ${CMAKE_TOOLCHAIN_FILE})
-
 get_filename_component(PROJECT_NAME_STR ${CMAKE_SOURCE_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${PROJECT_NAME_STR})
-
 
 set(CMAKE_BUILD_TYPE "Release")
 
@@ -30,24 +21,15 @@ aux_source_directory(. SRC_LIST)
 
 # Headers
 file(GLOB HEADERS_LIST "*.h" "*.hpp")
-include_directories(${Boost_INCLUDE_DIRS} ${CELERO_INCLUDE_DIRS})
 
 # Application
 add_executable(${PROJECT_NAME} ${SRC_LIST} ${HEADERS_LIST})
 
 # Setting C++ standard
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-
-if (MSVC)
-  target_compile_definitions(${PROJECT_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)
-  target_link_libraries(${PROJECT_NAME} Threads::Threads Boost::boost)
-else()
-#   target_compile_options(${PROJECT_NAME} PUBLIC -O2 -pipe -march=native)
-  target_link_libraries(${PROJECT_NAME} Threads::Threads Boost::boost stdc++fs)
-endif()
-
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
+target_link_libraries(${PROJECT_NAME} Threads::Threads Boost::boost)
 
 #----------------------------------------
 # Resources
 #----------------------------------------
-file(COPY proust.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY tokens.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
